[build-system]
requires = ["hatchling", "packaging", "ziglang==0.15.2"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-zsmooth"
description = "Cross-platform, cross-architecture video smoothing functions for Vapoursynth, written in Zig"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["vapoursynth>=75"]
dynamic = ["version"]

# Development dependencies to assist with script development and linting
[dependency-groups]
dev = ["hatchling", "packaging", "ziglang==0.15.2", "ruff", "mypy"]

[tool.hatch.version]
source = "regex"
path = "build.zig.zon"
pattern = '\.version\s*=\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "build.zig",
    "build.zig.zon",
]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/zsmooth"]
artifacts = [
    "vapoursynth/plugins/zsmooth/*.dylib",
    "vapoursynth/plugins/zsmooth/*.so",
    "vapoursynth/plugins/zsmooth/*.dll",
    "vapoursynth/plugins/zsmooth/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
